--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,7 +119,7 @@ body {
     height: 200px;
     width: 200px;
     position: relative;
-    transition all 1s ease;
+    transition: all 1s ease;
     display: flex;
     justify-content: center;
     align-items: center;
